# bazel-node-template

./: BUILD.bazel  WORKSPACE  app.js  index.html  package-lock.json  package.json
